# analysis-service

./: .env  .env.prod  .env.test  .gitignore  .gitmodules  .release-please-manifest.json  CONTRIBUTORS.md  README.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  release-please-config.json
acoustics-worker/: CHANGELOG.md  Dockerfile  mypy.ini  pyproject.toml  tox.ini
acoustics-worker/src/: cli.py
acoustics-worker/src/core/: acoustics.py  effort_model.py
acoustics-worker/tests/flat_dataset/annotations/vtc/converted/: recording_2_0_2000.csv  recording_3_0_4000.csv
acoustics-worker/tests/nested_dataset/annotations/vtc/converted/child_1/day_1/: recording_0_1000.csv
acoustics-worker/tests/nested_dataset/annotations/vtc/converted/child_1/day_1/hour_1/: recording_0_3000.csv
acoustics-worker/tests/nested_dataset/annotations/vtc/converted/child_2/day_1/hour_2/: recording_0_2000.csv
acoustics-worker/tests/unit/: acoustics_mock.py  test_acoustics_run_model.py  test_effort_model.py
alice/: pyproject.toml
alice-worker/: .flake8  Dockerfile  mypy.ini  pyproject.toml  tox.ini
alice-worker/src/: cli.py
alice-worker/src/core/: alice.py  effort_model.py  file_formats.py
alice-worker/tests/: forward_passes_flat.json  forward_passes_nested.json
alice-worker/tests/flat_datasets/stage_1/alice_folder/: ALICE_output.txt  ALICE_output_utterances.txt
alice-worker/tests/integration/: alice_mock.py  conftest.py  effort_model_mock.py  test_effort_model_flat.py  test_effort_model_nested.py  test_model_flat.py  test_model_nested.py
alice-worker/tests/nested_datasets/stage_1/alice_folder/: diarization_output.rttm
alice-worker/tests/unit/: alice_mock.py  effort_model_mock.py  test_alice_run_model.py  test_effort_model.py
daemon/: .flake8  .gitignore  CHANGELOG.md  Dockerfile  pyproject.toml  tox.ini
daemon/src/: cli.py  config.py  main.py  redis_utils.py  run_app.py
daemon/src/config/: config.py
daemon/src/core/: echolalia_api.py  elsi_api.py  types.py
daemon/src/domain/: commands.py  events.py
daemon/src/service/: command_handlers.py  http_client.py  service.py
daemon/src/service/handlers/: event_handlers.py  types.py
daemon/src/service/queue/: channels.py
daemon/tests/: command_tester.py  conftest.py  fake_event_handlers.py
daemon/tests/e2e/: redis_client.py  test_http_client.py  test_redis_events.py
daemon/tests/unit/: test_main.py
daemon/tests/unit/service/: fake_http_client.py  test_service.py
mock-echolalia/: CHANGELOG.md  Dockerfile  database_1.yml  pyproject.toml  tox.ini
mock-echolalia/src/: app_types.py  cli.py  create_app.py
mock-echolalia/tests/integration/: test_service.py
tests/: .gitignore  CHANGELOG.md  Dockerfile  pyproject.toml  tox.ini
tests/dummy_datasets/d34200f0-07dc-48e7-8508-8436c5b20ed6/annotations/vtc/converted/child_1/: 1_1_0_29954.csv  1_2_0_29954.csv
tests/dummy_datasets/d34200f0-07dc-48e7-8508-8436c5b20ed6/annotations/vtc/converted/child_2/: 2_1_0_29954.csv
tests/dummy_datasets/d34200f0-07dc-48e7-8508-8436c5b20ed6/annotations/vtc/raw/child_1/: 1_1.rttm  1_2.rttm
tests/dummy_datasets/d34200f0-07dc-48e7-8508-8436c5b20ed6/annotations/vtc/raw/child_2/: 2_1.rttm
tests/dummy_datasets/d34200f0-07dc-48e7-8508-8436c5b20ed6/annotations/vtc_acoustic/: metannots.yml
tests/dummy_datasets/d34200f0-07dc-48e7-8508-8436c5b20ed6/annotations/vtc_acoustic/converted/child_1/: 1_1_0_29954.csv  1_2_0_29954.csv
tests/dummy_datasets/d34200f0-07dc-48e7-8508-8436c5b20ed6/annotations/vtc_acoustic/converted/child_2/: 2_1_0_29954.csv
tests/dummy_datasets/d34200f0-07dc-48e7-8508-8436c5b20ed6/annotations/vtc_acoustic/raw/child_1/: 1_1.csv  1_2.csv
tests/dummy_datasets/d34200f0-07dc-48e7-8508-8436c5b20ed6/annotations/vtc_acoustic/raw/child_2/: 2_1.csv
tests/dummy_datasets/d34200f0-07dc-48e7-8508-8436c5b20ed6/chunks/: chunks_20260112_014816.csv  parameters_20260112_014816.yml  segments.csv
tests/dummy_datasets/d34200f0-07dc-48e7-8508-8436c5b20ed6/metadata/: annotations.csv  recordings.csv
tests/dummy_datasets/d34200f0-07dc-48e7-8508-8436c5b20ed6/recordings/converted/standard/: parameters_20260109_224539.yml  recordings.csv
tests/dummy_datasets/simple-test-dataset/metadata/: annotations.csv  children.csv  recordings.csv
tests/dummy_datasets/simple_test_dataset/metadata/: recordings.csv
tests/dummy_echolalia_folder/: test-config.toml
tests/tests/: app_types.py  conftest.py  test_task_completions.py  test_vtc_e2e.py
vtc-2-worker/: .flake8  .gitignore  CHANGELOG.md  Dockerfile  mypy.ini  pyproject.toml
vtc-2-worker/src/: cli.py
vtc-2-worker/src/core/: audio_format.py  effort_model.py  recording_formats.py  vtc_2.py
vtc-2-worker/tests/: forward_passes_flat.json  forward_passes_nested.json
vtc-2-worker/tests/integration/: conftest.py  effort_model_mock.py  test_effort_model_flat.py  test_effort_model_nested.py  test_vtc_2_flat.py  test_vtc_2_nested.py  vtc_2_mock.py
vtc-2-worker/tests/unit/: conftest.py  effort_model_mock.py  test_effort_model.py  test_vtc_2.py  test_vtc_2_run_model.py  vtc_2_mock.py
vtc-worker/: .flake8  CHANGELOG.md  Dockerfile  mypy.ini  pyproject.toml  tox.ini
vtc-worker/src/: channels.py  cli.py
vtc-worker/src/core/: channels.py  config.py  effort_model.py  file_formats.py  redis_utils.py  run_vtc.py  vtc.py
vtc-worker/tests/: conftest.py  forward_passes_flat.json  forward_passes_nested.json
vtc-worker/tests/e2e/: test_vtc.py
vtc-worker/tests/integration/: conftest.py  effort_model_mock.py  test_effort_model_flat.py  test_effort_model_nested.py  test_vtc_flat.py  test_vtc_nested.py  vtc_mock.py
vtc-worker/tests/unit/: conftest.py  effort_model_mock.py  empty_test.py  test_effort_model.py  test_vtc_run_model.py  vtc_mock.py
w2v2-worker/: CHANGELOG.md  Dockerfile  mypy.ini  pyproject.toml  testing.yaml  tox.ini
w2v2-worker/src/: cli.py  infer.py
w2v2-worker/src/core/: create_chunks.py  effort_model.py  sample_chi_vocs.py  split_output.py  w2v2.py
w2v2-worker/tests/unit/: effort_model_mock.py  test_effort_model.py  test_w2v2_run_model.py  w2v2_mock.py
(+14 files in other folders)
