[project]
name = "acoustics-worker"
version = "0.1.0"
description = "package and associated code for running acoustics on a dataset"
authors = [
    {name = "Lawrence Borst",email = "laurens.s.borst@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = [
    "analysis-service-core @ git+https://github.com/LAAC-LSCP/analysis-service-core.git",
    "click (>=8.3.1,<9.0.0)",
    "childproject @ git+https://github.com/LAAC-LSCP/ChildProject.git@5fb7f8e983567e349d72068224ca9e5ba1c1c59c"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
packages = [
    {include = "src"}
]
include = [
]
