[project]
name = "analysis-service-daemon"
version = "0.1.0"
description = "analysis service daemon for Echolalia"
authors = [
    {name = "Lawrence Borst",email = "laurens.borst@ens.psl.eu"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
