[project]
name = "analysis-service-daemon"
version = "0.5.0"
description = "analysis service daemon for Echolalia"
authors = [
    {name = "Lawrence Borst",email = "laurens.borst@ens.psl.eu"}
]
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = [
    "redis (>=7.1.0,<8.0.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "asyncio (>=4.0.0,<5.0.0)",
    "click (>=8.3.1,<9.0.0)"
]

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
packages = [
    {include = "src"}
]
include = [
]


[tool.black]
line-length = 88
target-version = ["py313"]


[tool.isort]
profile="black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true