[project]
name = "mock-echolalia"
version = "0.1.0"
description = "mocked echolalia server for E2E testing"
authors = [
    {name = "Lawrence Borst",email = "laurens.s.borst@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
