[project]
name = "analysis-service-tests"
version = "0.3.0"
description = "e2e and integration tests for analysis service"
authors = [
    {name = "Lawrence Borst",email = "laurens.s.borst@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = [
    "analysis-service-core @ git+https://github.com/LAAC-LSCP/analysis-service-core.git",
    "requests (>=2.32.5,<3.0.0)",
    "pytest-xdist (>=3.8.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]


[tool.poetry]
packages = [
    {include = "tests"}
]
include = [
]


[tool.black]
line-length = 88
target-version = ["py313"]


[tool.isort]
profile="black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true