[project]
name = "vtc-worker"
version = "0.1.0"
description = "package and associated code for running vtc on a dataset"
authors = [
    {name = "Lawrence Borst",email = "laurens.s.borst@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = [
    "redis (>=7.1.0,<8.0.0)",
    "click (>=8.3.1,<9.0.0)",
    "tenacity (>=9.1.2,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
