[project]
name = "vtc-worker"
version = "0.3.0"
description = "package and associated code for running vtc on a dataset"
authors = [
    {name = "Lawrence Borst",email = "laurens.s.borst@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = [
    "click (>=8.3.1,<9.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "analysis-service-core @ git+https://github.com/LAAC-LSCP/analysis-service-core.git@1fadb9ff048aa7b1716107d06ef5b34fc538d537",
]

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
packages = [
    {include = "src"}
]
include = [
]


[tool.poetry.dependencies]
analysis-service-core = {develop = true}
[tool.black]
line-length = 88
target-version = ["py313"]
exclude = '''
/(
    \.tox
  | vtc
)/
'''


[tool.isort]
profile="black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["vtc/*"]