[project]
name = "w2v2-worker"
version = "0.1.0"
description = "package and associated code for running w2v2 on a dataset"
authors = [
    {name = "Lawrence Borst",email = "laurens.s.borst@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = [
    "analysis-service-core @ git+https://github.com/LAAC-LSCP/analysis-service-core.git"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
packages = [
    {include = "src"}
]
include = [
]


[tool.black]
line-length = 88
target-version = ["py313"]
exclude = '''
/(
    \.tox
)/
'''


[tool.isort]
profile="black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true